last commit was this one

--- a/dev/templates/index.html
+++ b/dev/templates/index.html
@@ -14,15 +14,22 @@
 
 <body ontouchstart>
 
-<header>
-    <figure on-scroll="background-position-y" factor="-.6">
+<div class="colors">
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+</div>
+
+<header ng-controller="Header">
+    <figure>
         <a href="#">Taylor Code</a>
     </figure>
     <nav>
         <ul>
-            <li>Work</li>
-            <li>About</li>
-            <li>Hire Us</li>
+            <li><a ng-click="scrollTo('intro')">Home</a></li>
+            <li><a ng-click="scrollTo('projects')">Projects</a></li>
+            <li><a ng-click="scrollTo('blog')">Blog</a></li>
         </ul>
     </nav>
 </header>
