--- a/dev/assets/sass/main.sass
+++ b/dev/assets/sass/main.sass
@@ -60,30 +60,49 @@ body
 		*
 			width: 960px
 			margin: 0 auto
+		.colors
+			opacity: .8
+			position: absolute
+			width: 100%
+			top: 0
+			span
+				background: orange
+				width: 25%
+				border-bottom: 6px solid
+				display: block
+				float: left
+				&:nth-child(1)
+					border-color: #ff9a17
+				&:nth-child(2)
+					border-color: #a40328
+				&:nth-child(3)
+					border-color: black
+				&:nth-child(4)
+					border-color: #272a6a
 		header
 			margin-top: 30px
 			ul
 				margin-top: 6px
 				float: right
 				li
+					font-weight: 300
+					cursor: pointer
 					display: inline-block
 					padding: 10px 0
 					margin: 0 15px
-					&:first-child
-						border-bottom: 2px solid black
+					&:hover
+						border-bottom: 2px solid $lighter-gray
 						padding-bottom: 8px
 
 			figure
-				background: url(http://www.ebsqart.com/Art/Paintings/original-oil-on-canvas-varnished/98034/650/650/Fire-Abstract-2.jpg)
 				background-size: 200px
 				float: left
-				margin-left: -1px
+				margin-top: 10px
 				a
-					background: url(../images/logos/svg/logo-cutout.svg) no-repeat
+					background: url(../images/logos/svg/taylor-logo.svg) no-repeat
 					font-size: 40px
-					margin-left: -1px
-					width: 187px
-					height: 52px
+					width: 202px
+					height: 36px
 					overflow: hidden
 					display: block
 					@include hide-text
@@ -389,6 +408,8 @@ body
 			*
 				width: auto
 				padding: 20px
+			.colors
+				padding: 0px
 
 	h1
 		font-size: 42px
@@ -417,7 +438,7 @@ body
 		h3
 			font-size: 30px
 			line-height: 32px
-			
+
 		.fixed-upper-right
 			position: static
 			text-align: center
