--- a/dev/partials/post.html
+++ b/dev/partials/post.html
@@ -7,7 +7,7 @@
 	</article>
 	<div class="fixed-upper-right">
 		<div>
-			<a href="#">Home</a>
+			<a href="/"><span class="home"></span><span>Home</span></a>
 		</div>
 	</div>
 </div>
