--- a/dev/templates/index.html
+++ b/dev/templates/index.html
@@ -3,6 +3,7 @@
 <html lang="en" ng-app="portfolio">
 
 <head>
+    <base href="/index.html">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
@@ -23,11 +24,11 @@
 
 <header ng-controller="Header">
     <figure>
-        <a href="#">Taylor Code</a>
+        <a href="/">Taylor Code</a>
     </figure>
     <nav>
         <ul>
-            <li><a ng-click="scrollTo('intro')">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a ng-click="scrollTo('projects')">Projects</a></li>
             <li><a ng-click="scrollTo('blog')">Blog</a></li>
         </ul>
@@ -45,6 +46,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-route.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-touch.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.1/angular-cookies.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-animate.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
 
 <!-- plugins -->
