--- a/dev/assets/sass/main.sass
+++ b/dev/assets/sass/main.sass
@@ -60,7 +60,7 @@ body
 		*
 			width: 960px
 			margin: 0 auto
-		.colors
+		#colors
 			opacity: .8
 			position: absolute
 			width: 100%
@@ -91,7 +91,7 @@ body
 						font-weight: 300
 						cursor: pointer
 						text-decoration: none
-						margin: 10px 25px 0px 25px
+						margin: 10px 15px 0px 15px
 						padding-bottom: 10px
 						&:hover, &:active
 							border-bottom: 2px solid $lighter-gray
@@ -367,8 +367,7 @@ body
 
 
 
-
-@media all and (max-width: 460px)
+@media all and (max-width: 470px)
 	body
 		>
 		header
@@ -466,7 +465,7 @@ body
 				width: auto
 				padding: 20px
 				padding-top: 0px
-			.colors
+			#colors
 				padding: 0px
 
 @media all and (max-width: 750px)
