--- a/dev/assets/stylesheets/main.css
+++ b/dev/assets/stylesheets/main.css
@@ -66,14 +66,14 @@ body > * {
   margin: 0 auto;
 }
 /* line 63, ../sass/main.sass */
-body > .colors {
+body > #colors {
   opacity: 0.8;
   position: absolute;
   width: 100%;
   top: 0;
 }
 /* line 68, ../sass/main.sass */
-body > .colors span {
+body > #colors span {
   background: orange;
   width: 25%;
   border-bottom: 6px solid;
@@ -81,19 +81,19 @@ body > .colors span {
   float: left;
 }
 /* line 74, ../sass/main.sass */
-body > .colors span:nth-child(1) {
+body > #colors span:nth-child(1) {
   border-color: #ff9a17;
 }
 /* line 76, ../sass/main.sass */
-body > .colors span:nth-child(2) {
+body > #colors span:nth-child(2) {
   border-color: #a40328;
 }
 /* line 78, ../sass/main.sass */
-body > .colors span:nth-child(3) {
+body > #colors span:nth-child(3) {
   border-color: black;
 }
 /* line 80, ../sass/main.sass */
-body > .colors span:nth-child(4) {
+body > #colors span:nth-child(4) {
   border-color: #272a6a;
 }
 /* line 82, ../sass/main.sass */
@@ -115,7 +115,7 @@ body > header ul li a {
   font-weight: 300;
   cursor: pointer;
   text-decoration: none;
-  margin: 10px 25px 0px 25px;
+  margin: 10px 15px 0px 15px;
   padding-bottom: 10px;
 }
 /* line 96, ../sass/main.sass */
@@ -531,33 +531,33 @@ body > header figure a {
   position: relative;
 }
 
-@media all and (max-width: 460px) {
-  /* line 374, ../sass/main.sass */
+@media all and (max-width: 470px) {
+  /* line 373, ../sass/main.sass */
   body header {
     text-align: center;
   }
-  /* line 376, ../sass/main.sass */
+  /* line 375, ../sass/main.sass */
   body header figure {
     float: none;
     display: inline-block;
   }
-  /* line 379, ../sass/main.sass */
+  /* line 378, ../sass/main.sass */
   body header nav {
     clear: left;
   }
-  /* line 381, ../sass/main.sass */
+  /* line 380, ../sass/main.sass */
   body header nav ul {
     float: none;
   }
 }
 @media all and (max-width: 500px) {
-  /* line 386, ../sass/main.sass */
+  /* line 385, ../sass/main.sass */
   h1 {
     font-size: 42px;
     letter-spacing: -2px;
   }
 
-  /* line 390, ../sass/main.sass */
+  /* line 389, ../sass/main.sass */
   h2 {
     font-size: 25px;
     border-bottom: 2px solid #e2e2e2;
@@ -566,57 +566,57 @@ body > header figure a {
     letter-spacing: -1px;
   }
 
-  /* line 397, ../sass/main.sass */
+  /* line 396, ../sass/main.sass */
   h3 {
     font-size: 21px;
   }
 
-  /* line 402, ../sass/main.sass */
+  /* line 401, ../sass/main.sass */
   #post h1 {
     font-size: 40px;
     line-height: 39px;
   }
-  /* line 405, ../sass/main.sass */
+  /* line 404, ../sass/main.sass */
   #post h2 {
     font-size: 20px;
   }
-  /* line 407, ../sass/main.sass */
+  /* line 406, ../sass/main.sass */
   #post h3 {
     font-size: 30px;
     line-height: 32px;
   }
 
-  /* line 410, ../sass/main.sass */
+  /* line 409, ../sass/main.sass */
   #intro {
     margin: 0 0 30px 0;
   }
-  /* line 412, ../sass/main.sass */
+  /* line 411, ../sass/main.sass */
   #intro h1 {
     margin-bottom: 15px;
   }
-  /* line 414, ../sass/main.sass */
+  /* line 413, ../sass/main.sass */
   #intro h3 {
     margin-left: 8px;
   }
 
-  /* line 417, ../sass/main.sass */
+  /* line 416, ../sass/main.sass */
   #tags {
     display: none;
   }
 
-  /* line 421, ../sass/main.sass */
+  /* line 420, ../sass/main.sass */
   #projects h3, #blog h3 {
     margin-top: 15px;
   }
 
-  /* line 426, ../sass/main.sass */
+  /* line 425, ../sass/main.sass */
   #projects article [image-slider] {
     float: none;
     margin-left: 0;
     position: relative;
     width: auto;
   }
-  /* line 431, ../sass/main.sass */
+  /* line 430, ../sass/main.sass */
   #projects article [image-slider] nav {
     margin-left: 0;
     position: absolute;
@@ -627,157 +627,157 @@ body > header figure a {
     text-align: center;
     height: 100%;
   }
-  /* line 440, ../sass/main.sass */
+  /* line 439, ../sass/main.sass */
   #projects article [image-slider] nav div {
     background-color: rgba(255, 255, 255, 0.02);
     height: 100%;
   }
-  /* line 441, ../sass/main.sass */
+  /* line 440, ../sass/main.sass */
   #projects article [image-slider] nav div:before {
     content: "";
     display: inline-block;
     height: 100%;
     vertical-align: middle;
   }
-  /* line 448, ../sass/main.sass */
+  /* line 447, ../sass/main.sass */
   #projects article [image-slider] nav div:first-child {
     float: right;
   }
-  /* line 450, ../sass/main.sass */
+  /* line 449, ../sass/main.sass */
   #projects article [image-slider] nav div:last-child {
     float: left;
   }
-  /* line 452, ../sass/main.sass */
+  /* line 451, ../sass/main.sass */
   #projects article [image-slider] nav div a {
     display: inline-block;
     vertical-align: middle;
   }
-  /* line 456, ../sass/main.sass */
+  /* line 455, ../sass/main.sass */
   #projects article [image-slider] ul {
     width: auto;
   }
 }
 @media all and (max-width: 960px) {
-  /* line 462, ../sass/main.sass */
+  /* line 461, ../sass/main.sass */
   body * {
     overflow: hidden;
   }
-  /* line 465, ../sass/main.sass */
+  /* line 464, ../sass/main.sass */
   body > * {
     width: auto;
     padding: 20px;
     padding-top: 0px;
   }
-  /* line 469, ../sass/main.sass */
-  body > .colors {
+  /* line 468, ../sass/main.sass */
+  body > #colors {
     padding: 0px;
   }
 }
 @media all and (max-width: 750px) {
-  /* line 474, ../sass/main.sass */
+  /* line 473, ../sass/main.sass */
   #blog article, #post article {
     width: auto;
   }
 
-  /* line 477, ../sass/main.sass */
+  /* line 476, ../sass/main.sass */
   #post .fixed-upper-right {
     position: static;
     text-align: center;
   }
-  /* line 480, ../sass/main.sass */
+  /* line 479, ../sass/main.sass */
   #post .fixed-upper-right div {
     width: auto;
   }
-  /* line 482, ../sass/main.sass */
+  /* line 481, ../sass/main.sass */
   #post .fixed-upper-right div a {
     float: none;
     display: block;
   }
 }
 @media all and (min-width: 501px) and (max-width: 750px) {
-  /* line 488, ../sass/main.sass */
+  /* line 487, ../sass/main.sass */
   #projects section, #projects p {
     display: inline;
   }
-  /* line 490, ../sass/main.sass */
+  /* line 489, ../sass/main.sass */
   #projects [image-slider] {
     margin-bottom: 20px;
   }
 }
 @media all and (min-width: 1201px) and (max-width: 1400px) {
-  /* line 496, ../sass/main.sass */
+  /* line 495, ../sass/main.sass */
   body > * {
     width: 1020px;
   }
 
-  /* line 498, ../sass/main.sass */
+  /* line 497, ../sass/main.sass */
   h1 {
     font-size: 62px;
   }
 
-  /* line 500, ../sass/main.sass */
+  /* line 499, ../sass/main.sass */
   h2 {
     font-size: 31px;
   }
 
-  /* line 502, ../sass/main.sass */
+  /* line 501, ../sass/main.sass */
   h3 {
     font-size: 23px;
   }
 
-  /* line 505, ../sass/main.sass */
+  /* line 504, ../sass/main.sass */
   #post h1 {
     font-size: 52px;
   }
-  /* line 507, ../sass/main.sass */
+  /* line 506, ../sass/main.sass */
   #post h2 {
     font-size: 22px;
   }
-  /* line 509, ../sass/main.sass */
+  /* line 508, ../sass/main.sass */
   #post h3 {
     font-size: 32px;
   }
 
-  /* line 511, ../sass/main.sass */
+  /* line 510, ../sass/main.sass */
   #post .fixed-upper-right div {
     width: 1020px;
   }
 }
 @media all and (min-width: 1401px) {
-  /* line 516, ../sass/main.sass */
+  /* line 515, ../sass/main.sass */
   body > * {
     width: 1080px;
   }
 
-  /* line 519, ../sass/main.sass */
+  /* line 518, ../sass/main.sass */
   h1 {
     font-size: 64px;
   }
 
-  /* line 521, ../sass/main.sass */
+  /* line 520, ../sass/main.sass */
   h2 {
     font-size: 32px;
   }
 
-  /* line 523, ../sass/main.sass */
+  /* line 522, ../sass/main.sass */
   h3 {
     font-size: 24px;
   }
 
-  /* line 526, ../sass/main.sass */
+  /* line 525, ../sass/main.sass */
   #post h1 {
     font-size: 54px;
   }
-  /* line 528, ../sass/main.sass */
+  /* line 527, ../sass/main.sass */
   #post h2 {
     font-size: 24px;
   }
-  /* line 530, ../sass/main.sass */
+  /* line 529, ../sass/main.sass */
   #post h3 {
     font-size: 36px;
   }
 
-  /* line 532, ../sass/main.sass */
+  /* line 531, ../sass/main.sass */
   #post .fixed-upper-right div {
     width: 1080px;
   }
