--- a/dev/templates/index.html
+++ b/dev/templates/index.html
@@ -15,7 +15,7 @@
 
 <body ontouchstart>
 
-<div class="colors">
+<div id="colors">
     <span></span>
     <span></span>
     <span></span>
@@ -28,7 +28,7 @@
     </figure>
     <nav>
         <ul>
-            <li><a href="/">Home</a></li>
+            <li><a ng-click="scrollTo('colors')">Home</a></li>
             <li><a ng-click="scrollTo('projects')">Projects</a></li>
             <li><a ng-click="scrollTo('blog')">Blog</a></li>
         </ul>
