--- a/dev/templates/index.html
+++ b/dev/templates/index.html
@@ -6,10 +6,10 @@
     <base href="/index.html">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="google-site-verification" content="g8SpifNh2ebTOh43MV6_0iKHfANxhKcQgnqQ4E6BJsI">
 
     <!-- build:style bundle -->
     <!-- /build -->
-
     <link rel="stylesheet" href="http://yandex.st/highlightjs/7.5/styles/default.min.css">
 </head>
 
