--- a/dev/assets/sass/main.sass
+++ b/dev/assets/sass/main.sass
@@ -47,10 +47,13 @@ p
 a[href]
 	color: black
 
-
 body
 	*
 		overflow: hidden
+
+	code
+		overflow: scroll
+		-webkit-overflow-scrolling: touch
 
 	h1, h2, h3, h4, h5
 		overflow: visible
