--- a/dev/templates/index.html
+++ b/dev/templates/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <base href="/index.html">
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="google-site-verification" content="g8SpifNh2ebTOh43MV6_0iKHfANxhKcQgnqQ4E6BJsI">
 
